force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__AboutMe__c.field-meta.xml
<CustomField>
    <fullName>ssot__AboutMe__c</fullName>
    <label>About me</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AboutMe</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>