force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__FirstPublishedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__FirstPublishedDateTime__c</fullName>
    <label>First Published</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FirstPublishedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>