force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__LocationText__c.field-meta.xml
<CustomField>
    <fullName>ssot__LocationText__c</fullName>
    <label>Location</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LocationText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>