force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__PersonPublicProfilePrefSetId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PersonPublicProfilePrefSetId__c</fullName>
    <label>Person Public Profile Preference Set</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PersonPublicProfilePrefSetId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>