force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__PrimaryCredentialType__c.field-meta.xml
<CustomField>
    <fullName>ssot__PrimaryCredentialType__c</fullName>
    <label>Primary Credential Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PrimaryCredentialType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>