force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__rel_1720291153201_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291153201_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PersonPublicProfile_ContactId_map_In_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>PersonPublicProfile_ContactId_map_In_rel</relationshipLabel>
    <relationshipName>rel_1720291153201_end</relationshipName>
    <type>Lookup</type>
</CustomField>