force-app/main/default/objects/ssot__PersonPublicProfile__dlm/fields/ssot__WebsiteURL__c.field-meta.xml
<CustomField>
    <fullName>ssot__WebsiteURL__c</fullName>
    <label>Website</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WebsiteURL</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>